Sculpt crash after remesh (mask operators, cloth brush, ...) #84202

Closed
opened 2020-12-28 09:43:58 +01:00 by Anton · 25 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-27 21:45, hash: aa64fd69e7
Worked: 2.91

Short description of error
Blender crash in Sculpt Mode when Lasso Mask is used after performing remesh (Crtl_R).

Exact steps for others to reproduce the error

  1. Create new default scene
  2. Delete default cube and lights
  3. Create a UV Sphere
  4. In Sculpting workspace use Lasso Mask
  5. Result - Lasso Mask works as expected
  6. Perform a remesh (Ctrl+R) with default settings
  7. Result - Blender crash
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-27 21:45, hash: `aa64fd69e7` Worked: 2.91 **Short description of error** Blender crash in Sculpt Mode when Lasso Mask is used after performing remesh (Crtl_R). **Exact steps for others to reproduce the error** 1. Create new default scene 2. Delete default cube and lights 3. Create a UV Sphere 4. In Sculpting workspace use Lasso Mask 5. Result - Lasso Mask works as expected 6. Perform a remesh (Ctrl+R) with default settings 7. Result - Blender crash
Author

Added subscriber: @nastydroid

Added subscriber: @nastydroid

#84479 was marked as duplicate of this issue

#84479 was marked as duplicate of this issue

#84393 was marked as duplicate of this issue

#84393 was marked as duplicate of this issue

#84344 was marked as duplicate of this issue

#84344 was marked as duplicate of this issue

#84365 was marked as duplicate of this issue

#84365 was marked as duplicate of this issue

#84240 was marked as duplicate of this issue

#84240 was marked as duplicate of this issue

#84132 was marked as duplicate of this issue

#84132 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

I am getting an assert in Debug builds, but no crash in Release builds:

BLI_assert failed: source/blender/blenkernel/intern/paint.c:1656, sculpt_update_object(), at 'CustomData_has_layer(&me->pdata, CD_SCULPT_FACE_SETS)'
I am getting an assert in Debug builds, but no crash in Release builds: ``` BLI_assert failed: source/blender/blenkernel/intern/paint.c:1656, sculpt_update_object(), at 'CustomData_has_layer(&me->pdata, CD_SCULPT_FACE_SETS)' ```
Member

Added subscribers: @PabloDobarro, @mont29

Added subscribers: @PabloDobarro, @mont29
Member

That assert is caused by d29a720c45

CC @mont29
CC @PabloDobarro

That assert is caused by d29a720c45 CC @mont29 CC @PabloDobarro
Bastien Montagne self-assigned this 2020-12-28 11:08:41 +01:00

Then we need a proper way to re-generate those data indeed...

Then we need a proper way to re-generate those data indeed...

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Same as this #84132 (Sculpt: crash in Sculpt Mode when using mask operators after voxel remeshing)
Perhaps should be merged... 😉

Same as this #84132 (Sculpt: crash in Sculpt Mode when using mask operators after voxel remeshing) Perhaps should be merged... 😉

Added subscribers: @lowpolysaac, @torrent-1, @Zeekar, @MetinSeven-1

Added subscribers: @lowpolysaac, @torrent-1, @Zeekar, @MetinSeven-1

Note: technical discussion happening in d29a720c45 currently.

Note: technical discussion happening in d29a720c45 currently.
Philipp Oeser changed title from Sculpt lasso mask crash after remesh. to Sculpt crash after remesh (mask operators, cloth brush, ...) 2020-12-29 14:25:06 +01:00
Member

Added subscriber: @Otilla

Added subscriber: @Otilla

This issue was referenced by 6672cbeb23

This issue was referenced by 6672cbeb236444541037e728759792b1208df0da

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @JulianPerez

Added subscriber: @JulianPerez
Member

Added subscriber: @Vyach

Added subscriber: @Vyach

Added subscriber: @JerBot

Added subscriber: @JerBot

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Fix verified on Manjaro Linux.

ALL GOOD!

Fix *verified* on **Manjaro Linux**. ALL GOOD!
Member

Added subscriber: @Sekhar

Added subscriber: @Sekhar
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:15:35 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84202
No description provided.